0.83.2
  - The copy & paste Windows clipboard text via the right
    mouse button feature now has limited support for PC-98
    mode too in addition to other modes. (Wengier)
  - Improved support for FluidSynth MIDI device by porting
    code from DOSBox ECE. Set "mididevice=fluidsynth" along
    with other required options such as "fluid.soundfont"
    in dosbox-x.conf to use it. The previous config setting
    "mididevice=synth" is still supported for alternative
    implementation of FluidSynth. (Wengier)

0.83.1
  - Sound Blaster emulation fixed to better handle Goldplay
    mode detection false positive in 1994 demoscene demo
    myth_dw.zip when using Sound Blaster Pro setting in
    the demo. The initial state before music starts is
    like Goldplay mode, but when music actually starts the
    DMA programmed to normal state without restarting
    DMA playback.
  - dosbox-x.conf is now recognized as the default config
    file name in addition to dosbox.conf. The sample config
    file "dosbox.reference.conf" has been renamed to
    "dosbox-x.reference.conf" as well (Wengier)
  - Tandy DAC output fixed to slowly ramp last sample to
    zero DC sample (128) when switched off. This fixes
    loud popping (DC offset) problems with Tandy DAC
    sound effects in Prince of Persia. This new behavior
    also seems to match real Tandy 1000 hardware according
    to video captures of it's audio/video outputs while
    playing Prince of Persia on it.
  - Tandy/PCjr 3-voice fixed to respond to I/O port 0xC0
    regardless of 8-bit or 16-bit I/O (fixes Prince of
    Persia).
  - Write-protecting a disk image in IMGMOUNT and BOOT
    commands now supported by putting a leading colon (:)
    before the image file name. Works with disk swapping;
    e.g. "BOOT :C:\DISK1.IMG C:\DISK2.IMG" only write-
    protects C:\DISK1.IMG but not C:\DISK2.IMG. The new
    config option "leading colon write protect image" can
    be used to disable or enable this behavior (Wengier)